2017-10-05 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-818
	
	* src/m_fos.cc:  Change trying to debug error reported by Jana 
	(I cannot reproduce the error, but these changes should make it 
	more robust)

2017-10-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-817

	* src/microphysics.cc (psd_rain_W16): Bug fix. The factor 100 was
	applied on lambda too early, and then gave an incorrect N0.

	* src/m_cloudradar.cc (iyActiveSingleScat): Retrieval of e.g. both
	rain and ice diod not work as scattering properties were extracted
	quite blindly and temperature interpolation problems occured.
	Scattering properties now only extracted were actually needed.

	* src/m_oem.cc (xaStandard): Corrected error string associated
	with particle_bulkprop_field.

2017-10-04 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-816

	* src/m_fox.cc:  Should now work with sensor jacobians

	* src/jacobian.cc:  Updated some comments

2017-10-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-815

	* src/m_oem.cc (x2artsStandard, xaStandard)
	- Added conversion for wind components

	* src/methods.cc (x2artsStandard, xaStandard)
	- Added wind fields to arguments

	* src/special_interp.cc(regrid_atmfield_by_gp)
	- Fixed if statement for 3D atmosphere

2017-10-03 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-814

	* src/rt4.cc (sca_optpropCalc):
	Revision for more consistent handling of scattering matrix (from single
	T-gridpoint) with extinction and absorption data (from T-interpolation).
	Preservation of bulk-Z norm needs to be checked vs. gridpoint-T
	ext/abs	(regards the structure of the phase function), but output
	bulk-Z for RT4 solution needs to be normalized to bulk-scatt coeff
	consistent with ext/abs extracted for use in RT4 solution (regards the
	scattering coefficient).

	ATTENTION:
	This needs to be taken care of also when implementing T-grid reduction
	for scat_data. Seems to be a bad idea to allow K and a on different