@@ -1,5 +1,11 @@
 2017-10-05 Richard Larsson  <ric.larsson@gmail.com>
 
+	* arts-2-3-819
+	
+	* src/arts_api.cc, src/interactive_workspace.{cc,h}: Added Tensor4
+
+2017-10-05 Richard Larsson  <ric.larsson@gmail.com>
+
 	* arts-2-3-818
 	
 	* src/m_fos.cc:  Change trying to debug error reported by Jana 
